--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "formik": "^2.2.9",
-    "framer-motion": "^9.0.4",
+    "framer-motion": "^9.1.7",
     "lodash": "^4.17.21",
     "mongodb": "^4.14.0",
     "mongoose": "^6.9.2",
@@ -35,12 +35,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-transition-group": "^4.4.5",
     "swr": "^2.2.0",
     "typescript": "4.9.5",
     "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/react-transition-group": "^4.4.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prisma": "^4.10.1",
